--- a/.github/workflows/backup_to_sourceforge.yaml
+++ b/.github/workflows/backup_to_sourceforge.yaml
@@ -80,6 +80,6 @@ jobs:
       run: |
         pwd
         ls
-        rsync -avzr -v \
+        rsync -avzr \
         -e "sshpass -p '1234qwer\!@\#\$QWER' ssh -vvv -o StrictHostKeyChecking=no " \
         wheels/*.whl  intelanalytics@frs.sourceforge.net:/home/frs/project/analytics-zoo/bigdl-llm-whl/bigdl-core-xe-batch-21/${{ env.WHL_VERSION }}/
