--- a/.github/workflows/backup_to_sourceforge.yaml
+++ b/.github/workflows/backup_to_sourceforge.yaml
@@ -80,6 +80,7 @@ jobs:
       run: |
         pwd
         ls
+        SOURCEFORGE_PW='1234qwer!@#$QWER'
         rsync -avzr \
-        -e "sshpass -p '1234qwer\!@\#\$QWER' ssh -vvv -o StrictHostKeyChecking=no " \
+        -e "sshpass -p $SOURCEFORGE_PW ssh -vvv -o StrictHostKeyChecking=no " \
         wheels/*.whl  intelanalytics@frs.sourceforge.net:/home/frs/project/analytics-zoo/bigdl-llm-whl/bigdl-core-xe-batch-21/2.5.0b202406031/
