--- a/.github/workflows/retry_perf.yml
+++ b/.github/workflows/retry_perf.yml
@@ -2,7 +2,7 @@ name: Rerun failed workflows
 on:
   workflow_dispatch:
   schedule: 
-    - cron: '38 14 * * *' # GMT time, 21:03 GMT == 06:03 China
+    - cron: '*/5 * * * *' # GMT time, 21:03 GMT == 06:03 China
   push:
     branches:
       - main
